@@ -43,7 +43,9 @@ form    lead sheets:
 <img src="@IMAGES@example-lead.png">
 
 
+<a name="orchestral"></a>
 <h2>Orchestral parts</h2>
+
 <p>
 The input file list the definition of notes, and these definitions
 can be reused, thereby guaranteeing that parts and score are always
