@@ -1,5 +1,8 @@
 2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/about/automated-engraving/typography-features.html: add
+	ledger lines example.
+
 	* site/images/computer-totaal.jpeg (Module): new file.
 
 	* site/about/thanks.html (Module): mention devel team.
